Closed Bug 1242221 Opened 7 years ago Closed 4 years ago

Intermittent| Main app process exited normally | application crashed [None]

Categories

(DevTools :: General, defect, P3)

defect

Tracking

(firefox-esr60 unaffected, firefox-esr68 unaffected, firefox68 unaffected, firefox69 unaffected, firefox70 fixed)

RESOLVED FIXED
Firefox 70
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox68 --- unaffected
firefox69 --- unaffected
firefox70 --- fixed

People

(Reporter: philor, Assigned: kershaw)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [e10s-orangeblockers][retriggered][stockwell disable-recommended])

Attachments

(1 file)

See Also: → 1253852
Quite sure this is another manifestation of bug 1227718 et al.
See Also: → 1227718
Whiteboard: [e10s-orangeblockers]
See Also: 1227718
Intermittent test crash
Priority: -- → P3
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → WORKSFORME
Product: Firefox → DevTools
Recent log failure:

https://treeherder.mozilla.org/logviewer.html#?job_id=194097719&repo=autoland&lineNumber=23635 

07:16:52     INFO - mozcrash Downloading symbols from: https://queue.taskcluster.net/v1/task/bTFb15qYSjmIIiPY6R_fZA/artifacts/public/build/target.crashreporter-symbols.zip
07:17:00     INFO - mozcrash Copy/paste: /Users/cltbld/tasks/task_1534341711/build/macosx64-minidump_stackwalk /var/folders/fd/zgw3q1bd59738zsm70dzcd5c00000w/T/tmp7dulvw.mozrunner/minidumps/2887A288-7E54-44BC-9123-AA19335EAB7B.dmp /var/folders/fd/zgw3q1bd59738zsm70dzcd5c00000w/T/tmpybfa1k
07:17:00     INFO - mozcrash Saved minidump as /Users/cltbld/tasks/task_1534341711/build/blobber_upload_dir/2887A288-7E54-44BC-9123-AA19335EAB7B.dmp
07:17:00     INFO - PROCESS-CRASH | Main app process exited normally | application crashed [None]
07:17:00     INFO - Crash dump filename: /var/folders/fd/zgw3q1bd59738zsm70dzcd5c00000w/T/tmp7dulvw.mozrunner/minidumps/2887A288-7E54-44BC-9123-AA19335EAB7B.dmp
07:17:00     INFO - stderr from minidump_stackwalk:
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4359: INFO: Minidump opened minidump /var/folders/fd/zgw3q1bd59738zsm70dzcd5c00000w/T/tmp7dulvw.mozrunner/minidumps/2887A288-7E54-44BC-9123-AA19335EAB7B.dmp
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4479: INFO: Minidump not byte-swapping minidump
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4956: INFO: GetStream: type 15 not present
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4956: INFO: GetStream: type 7 not present
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4956: INFO: GetStream: type 7 not present
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4956: INFO: GetStream: type 1197932545 not present
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4956: INFO: GetStream: type 6 not present
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4956: INFO: GetStream: type 1197932546 not present
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4956: INFO: GetStream: type 4 not present
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4956: INFO: GetStream: type 5 not present
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4956: INFO: GetStream: type 3 not present
07:17:00     INFO - 2018-08-15 07:17:00: minidump_processor.cc:152: ERROR: Minidump /var/folders/fd/zgw3q1bd59738zsm70dzcd5c00000w/T/tmp7dulvw.mozrunner/minidumps/2887A288-7E54-44BC-9123-AA19335EAB7B.dmp has no thread list
07:17:00     INFO - 2018-08-15 07:17:00: stackwalk.cc:139: ERROR: MinidumpProcessor::Process failed
07:17:00     INFO - 2018-08-15 07:17:00: minidump.cc:4331: INFO: Minidump closing minidump
07:17:00     INFO - mozcrash Copy/paste: /Users/cltbld/tasks/task_1534341711/build/macosx64-minidump_stackwalk /var/folders/fd/zgw3q1bd59738zsm70dzcd5c00000w/T/tmp7dulvw.mozrunner/minidumps/CE477554-BCDE-4E08-9217-BE6D000D1410.dmp /var/folders/fd/zgw3q1bd59738zsm70dzcd5c00000w/T/tmpybfa1k
07:17:13     INFO - mozcrash Saved minidump as /Users/cltbld/tasks/task_1534341711/build/blobber_upload_dir/CE477554-BCDE-4E08-9217-BE6D000D1410.dmp
07:17:13     INFO - mozcrash Saved app info as /Users/cltbld/tasks/task_1534341711/build/blobber_upload_dir/CE477554-BCDE-4E08-9217-BE6D000D1410.extra
07:17:13     INFO - PROCESS-CRASH | Main app process exited normally | application crashed [@ libsystem_kernel.dylib + 0x114de]
07:17:13     INFO - Crash dump filename: /var/folders/fd/zgw3q1bd59738zsm70dzcd5c00000w/T/tmp7dulvw.mozrunner/minidumps/CE477554-BCDE-4E08-9217-BE6D000D1410.dmp
07:17:13     INFO - Operating system: Mac OS X
07:17:13     INFO -                   10.10.5 14F27
07:17:13     INFO - CPU: amd64
07:17:13     INFO -      family 6 model 69 stepping 1
07:17:13     INFO -      4 CPUs
07:17:13     INFO - 
07:17:13     INFO - GPU: UNKNOWN
07:17:13     INFO - 
07:17:13     INFO - Crash reason:  0x0000000a / 0x00000001
07:17:13     INFO - Crash address: 0x7fff9143f4de
07:17:13     INFO - Process uptime: 575 seconds
07:17:13     INFO - 
07:17:13     INFO - Thread 0 (crashed)
07:17:13     INFO -  0  libsystem_kernel.dylib + 0x114de
07:17:13     INFO -     rax = 0x0000000000000000   rdx = 0x0000000000000064
07:17:13     INFO -     rcx = 0x00007fff567cc5b8   rbx = 0x00000000000007d0
07:17:13     INFO -     rsi = 0x0000000000000011   rdi = 0x00007fff567ccb00
07:17:13     INFO -     rbp = 0x00007fff567cc600   rsp = 0x00007fff567cc5b8
07:17:13     INFO -      r8 = 0x0000000000000000    r9 = 0x00000000000007d0
07:17:13     INFO -     r10 = 0x0000000000000000   r11 = 0x0000000000000206
07:17:13     INFO -     r12 = 0x0000000000000000   r13 = 0x0000000000000064
07:17:13     INFO -     r14 = 0x00007fff567ccb00   r15 = 0x0000000000000000
07:17:13     INFO -     rip = 0x00007fff9143f4de
07:17:13     INFO -     Found by: given as instruction pointer in context
07:17:13     INFO -  1  XUL!mozilla::recordreplay::RR_mach_msg(mach_msg_header_t*, int, unsigned int, unsigned int, unsigned int, unsigned int, unsigned int) [ProcessRedirect.h:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 119 + 0x1b]
07:17:13     INFO -     rbp = 0x00007fff567cc680   rsp = 0x00007fff567cc610
07:17:13     INFO -     rip = 0x000000010cf54388
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO -  2  XUL!google_breakpad::MachPortSender::SendMessage(google_breakpad::MachSendMessage&, unsigned int) [MachIPC.mm:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 295 + 0x19]
07:17:13     INFO -     rbp = 0x00007fff567cc6a0   rsp = 0x00007fff567cc690
07:17:13     INFO -     rip = 0x000000010cf2ab73
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO -  3  XUL!google_breakpad::CrashGenerationClient::RequestDumpForException(int, int, int, unsigned int) [crash_generation_client.cc:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 69 + 0x14]
07:17:13     INFO -     rbp = 0x00007fff567ccf50   rsp = 0x00007fff567cc6b0
07:17:13     INFO -     rip = 0x000000010cf20e05
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO -  4  XUL!google_breakpad::ExceptionHandler::WriteMinidumpWithException(int, int, int, __darwin_ucontext*, unsigned int, bool, bool) [exception_handler.cc:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 382 + 0xe]
07:17:13     INFO -     rbp = 0x00007fff567cd040   rsp = 0x00007fff567ccf60
07:17:13     INFO -     rip = 0x000000010cf235c5
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO -  5  XUL!google_breakpad::ExceptionHandler::WriteForwardedExceptionMinidump(int, int, int, unsigned int) [exception_handler.cc:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 651 + 0xf]
07:17:13     INFO -     rbp = 0x00007fff567cd060   rsp = 0x00007fff567cd050
07:17:13     INFO -     rip = 0x000000010cf23cd7
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO -  6  XUL!mozilla::recordreplay::child::ReportFatalError(mozilla::Maybe<mozilla::recordreplay::child::MinidumpInfo> const&, char const*, ...) [ChildIPC.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 329 + 0xe]
07:17:13     INFO -     rbp = 0x00007fff567ce980   rsp = 0x00007fff567cd070
07:17:13     INFO -     rip = 0x000000010cf7a772
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO -  7  XUL!RecordReplayInterface_InternalRecordReplayAssert [ProcessRecordReplay.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 474 + 0x38]
07:17:13     INFO -     rbp = 0x00007fff567cee10   rsp = 0x00007fff567ce990
07:17:13     INFO -     rip = 0x000000010cf48ff5
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO -  8  XUL!mozilla::recordreplay::RecordReplayAssert(char const*, ...) [RecordReplay.h:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 474 + 0x5]
07:17:13     INFO -     rbp = 0x00007fff567ceef0   rsp = 0x00007fff567cee20
07:17:13     INFO -     rip = 0x000000010cf3ca2c
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO -  9  XUL!mozilla::recordreplay::RR_mach_absolute_time() [ProcessRedirect.h:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 193 + 0xe]
07:17:13     INFO -     rbp = 0x00007fff567cef40   rsp = 0x00007fff567cef00
07:17:13     INFO -     rip = 0x000000010cf5417c
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 10  XUL!AsyncFreeSnowWhite::Run() [TimeStamp.h:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 468 + 0xa]
07:17:13     INFO -     rbp = 0x00007fff567cefa0   rsp = 0x00007fff567cef50
07:17:13     INFO -     rip = 0x000000010a01cfe0
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 11  XUL!IdleRunnableWrapper::Run() [nsThreadUtils.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 343 + 0x6]
07:17:13     INFO -     rbp = 0x00007fff567cefd0   rsp = 0x00007fff567cefb0
07:17:13     INFO -     rip = 0x000000010982354c
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 12  XUL!IdleRunnableWrapper::TimedOut(nsITimer*, void*) [nsThreadUtils.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 351 + 0x6]
07:17:13     INFO -     rbp = 0x00007fff567ceff0   rsp = 0x00007fff567cefe0
07:17:13     INFO -     rip = 0x0000000109823aa5
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 13  XUL!nsTimerImpl::Fire(int) [nsTimerImpl.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 701 + 0x7]
07:17:13     INFO -     rbp = 0x00007fff567cf0a0   rsp = 0x00007fff567cf000
07:17:13     INFO -     rip = 0x0000000109826ebd
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 14  XUL!nsTimerEvent::Run() [TimerThread.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 297 + 0x5]
07:17:13     INFO -     rbp = 0x00007fff567cf0d0   rsp = 0x00007fff567cf0b0
07:17:13     INFO -     rip = 0x00000001098147e8
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 15  XUL!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 1235 + 0x6]
07:17:13     INFO -     rbp = 0x00007fff567cf610   rsp = 0x00007fff567cf0e0
07:17:13     INFO -     rip = 0x000000010981ab8c
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 16  XUL!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 519 + 0xd]
07:17:13     INFO -     rbp = 0x00007fff567cf630   rsp = 0x00007fff567cf620
07:17:13     INFO -     rip = 0x000000010981d567
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 17  XUL!mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [MessagePump.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 97 + 0xa]
07:17:13     INFO -     rbp = 0x00007fff567cf680   rsp = 0x00007fff567cf640
07:17:13     INFO -     rip = 0x0000000109d0e8a9
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 18  XUL!MessageLoop::Run() [message_loop.cc:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 325 + 0x8]
07:17:13     INFO -     rbp = 0x00007fff567cf6b0   rsp = 0x00007fff567cf690
07:17:13     INFO -     rip = 0x0000000109cd362b
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 19  XUL!nsBaseAppShell::Run() [nsBaseAppShell.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 158 + 0x8]
07:17:13     INFO -     rbp = 0x00007fff567cf6d0   rsp = 0x00007fff567cf6c0
07:17:13     INFO -     rip = 0x000000010bc07179
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 20  XUL!nsAppShell::Run() [nsAppShell.mm:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 737 + 0x8]
07:17:13     INFO -     rbp = 0x00007fff567cf700   rsp = 0x00007fff567cf6e0
07:17:13     INFO -     rip = 0x000000010bc6f03f
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 21  XUL!XRE_RunAppShell() [nsEmbedFunctions.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 937 + 0x6]
07:17:13     INFO -     rbp = 0x00007fff567cf740   rsp = 0x00007fff567cf710
07:17:13     INFO -     rip = 0x000000010cf9d215
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 22  XUL!MessageLoop::Run() [message_loop.cc:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 325 + 0x8]
07:17:13     INFO -     rbp = 0x00007fff567cf770   rsp = 0x00007fff567cf750
07:17:13     INFO -     rip = 0x0000000109cd362b
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 23  XUL!XRE_InitChildProcess(int, char**, XREChildData const*) [nsEmbedFunctions.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 763 + 0x5]
07:17:13     INFO -     rbp = 0x00007fff567cfa40   rsp = 0x00007fff567cf780
07:17:13     INFO -     rip = 0x000000010cf9cfb2
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 24  plugin-container!main [plugin-container.cpp:413c0f58374c3fd8af375ea1b680cb86c4a1492b : 50 + 0x13]
07:17:13     INFO -     rbp = 0x00007fff567cfa80   rsp = 0x00007fff567cfa50
07:17:13     INFO -     rip = 0x000000010942ff39
07:17:13     INFO -     Found by: previous frame's frame pointer
07:17:13     INFO - 25  libdyld.dylib + 0x35c9
07:17:13     INFO -     rbp = 0x00007fff567cfa90   rsp = 0x00007fff567cfa90
07:17:13     INFO -     rip = 0x00007fff93f395c9
07:17:13     INFO -     Found by: previous frame's frame pointer
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Summary: Intermittent e10s devtools PROCESS-CRASH | Main app process exited normally | application crashed [None] → Intermittent| Main app process exited normally | application crashed [None]

Based on retriggers this is from bug 1563821, Kershaw please take a look.

Flags: needinfo?(kershaw)
Regressed by: 1563821
Assignee: nobody → kershaw
Flags: needinfo?(kershaw)

Hi Honza, could you please take a look at this patch? Failure rate is high here.

Thank you.

Flags: needinfo?(honzab.moz)
Flags: needinfo?(honzab.moz)

Thank you!

Hi Kershaw is there an update here?

Flags: needinfo?(kershaw)
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/648bcac47c6c
Close IPC channel before MessageLoop gets destroyed r=mayhemer

(In reply to Andreea Pavel [:apavel] from comment #60)

Hi Kershaw is there an update here?

I just landed the patch. Hope it can fix this problem.
https://treeherder.mozilla.org/#/jobs?repo=try&selectedJob=258299525&revision=46b61aa1591e6e892cde7f71b613a28e44fce0e7

Flags: needinfo?(kershaw)

(In reply to Kershaw Chang [:kershaw] from comment #62)

(In reply to Andreea Pavel [:apavel] from comment #60)

Hi Kershaw is there an update here?

I just landed the patch. Hope it can fix this problem.
https://treeherder.mozilla.org/#/jobs?repo=try&selectedJob=258299525&revision=46b61aa1591e6e892cde7f71b613a28e44fce0e7

Thank you for working on this!

Status: REOPENED → RESOLVED
Closed: 6 years ago4 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 70

This is a pretty ancient bug with a very generic failure message. For any future occurrences, let's please open new bugs for the specific regressions rather than dumping them into this bug.

(In reply to Ryan VanderMeulen [:RyanVM] from comment #66)

This is a pretty ancient bug with a very generic failure message. For any future occurrences, let's please open new bugs for the specific regressions rather than dumping them into this bug.

Okay, will do.

See Also: → 1569660
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.